package br.unesp.rc.BolsaValoresSimulator.model;

public enum Indexador {

    IPCA,
    CDI,
    SELIC,
    NENHUM
}
