package br.unesp.rc.BolsaValoresSimulator.model;

public enum TipoAtivo {

    ACAO,
    FUNDO_IMOBILIARIO
}
