package br.unesp.rc.BolsaValoresSimulator.model;

public enum TipoTransacao {

    INVESTIMENTO,
    PROVENTO,
    RETIRADA
}
