package br.unesp.rc.FGCSimulator.model;

public enum StatusTransacao {

    PENDENTE,
    PROCESSANDO,
    CONFIRMADA,
    FINALIZADA,
    CANCELADA,
    FALHOU
}
